--- a/frontend/src/components/EditBook.css
+++ b/frontend/src/components/EditBook.css
@@ -1,5 +1,8 @@
+body {
+  font-family: Arial, sans-serif;
+}
 .Edit-Book {
-  max-width: 80%;
+  min-width: 80%;
   display: grid;
   padding: 20px;
   padding-bottom: 10%;
